# dlthub_demo

./: .gitignore  pipeline_config.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
ingestion/: README.md  filesystem_pipeline.py  s3_to_athena..py  s3_to_iceberg copy.py  s3_to_iceberg.py  test_buffer_size.py
ingestion/.dlt/: config.toml  secrets.toml
