[project]
name = "dlthub-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[athena,duckdb,filesystem,gs,pyiceberg]>=1.17.1",
    "duckdb>=1.4.1",
    "marimo>=0.16.5",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.18",
]
